Fixed issue with editor overlapping top menus

--- a/MediaQuere.Web/Assets/Styles/workspace.less
+++ b/MediaQuere.Web/Assets/Styles/workspace.less
@@ -1,5 +1,6 @@
 ﻿#workspace {
 	position: absolute;
+	z-index: 1;
 	top: 0;
 	left: 0;
 	right: 200px;
